# SanityScrew

./: Build.md  README.md  SanityScrew  SanityScrew,cpp  installer.sh  unicornpp.cpp
.github/workflows/: action.yml  build64.yml  cmake-multi-platform.yml  main.yml  multiarch.yml
examples/: helloworld.ss
src/: CMakeLists.txt  SSJIT.h  SanityScrew.cpp  main.cpp
